# src/main/java/com/example/bankcards/dto/security/JwtAuthenticationDto.java
@@ -1,0 +1,9 @@
+package com.example.bankcards.dto.security;
+
+import lombok.Data;
+
+@Data
+public class JwtAuthenticationDto {
+    private String token;
+    private String refreshToken;
+}
