# src/main/java/com/example/bankcards/dto/security/RefreshTokenDto.java
@@ -1,0 +1,8 @@
+package com.example.bankcards.dto.security;
+
+import lombok.Data;
+
+@Data
+public class RefreshTokenDto {
+    private String refreshToken;
+}
