# src/main/java/com/example/bankcards/dto/security/UserCredentialsDto.java
@@ -1,0 +1,9 @@
+package com.example.bankcards.dto.security;
+
+import lombok.Data;
+
+@Data
+public class UserCredentialsDto {
+    private String userName;
+    private String password;
+}
